Improve blog design: fix slug detection, enhance MDX styling, richer AI prompts
- Fixed [slug] folder being detected as blog post
- Enhanced MDX template with better prose styling
- Updated AI prompts to generate richer formatted content
- Added blockquotes, bold highlights, numbered steps to existing posts

--- a/app/blog/2025-12-09-beyond-the-buzzwords-your-2025-blueprint-for-architecting-an-unstoppable-career.mdx
+++ b/app/blog/2025-12-09-beyond-the-buzzwords-your-2025-blueprint-for-architecting-an-unstoppable-career.mdx
@@ -6,26 +6,48 @@ description: "Ever felt like you're staring at a giant, unreadable blueprint for
 tags: ["career","advice","professional-development"]
 ---
 
-Ever felt like you're staring at a giant, unreadable blueprint for your future? Like everyone else got the secret decoder ring for 'adulting' and you're still trying to figure out which end of the wrench to use? Welcome to the club. Especially as a student or young pro, navigating the career landscape in 2025 feels less like a smooth highway and more like an off-road rally with a thousand potential detours.
+Ever felt like you're staring at a giant, unreadable blueprint for your future? Like everyone else got the secret decoder ring for 'adulting' and you're still trying to figure out which end of the wrench to use? **Welcome to the club.** 
 
-The good news? You don't need a secret society membership. You need a system. Not just *any* system, but a resilient, scalable, and adaptable one. Think of yourself as the lead architect for your own career's operating system (OS). Just like the pros who design the complex systems behind tech giants, you can learn to build something that doesn't just work, but *thrives*.
+Especially as a student or young pro, navigating the career landscape in **2025** feels less like a smooth highway and more like an off-road rally with a thousand potential detours.
 
-I've seen the magic happen – not just in cracking high-stakes interviews, but in building careers that genuinely click. The principles are universal, and by 2025, they're more critical than ever. Let's dive into your personal system design toolkit.
+> **The good news?** You don't need a secret society membership. You need a **system**.
+
+Not just *any* system, but a **resilient, scalable, and adaptable one**. Think of yourself as the lead architect for your own career's operating system (OS). Just like the pros who design the complex systems behind tech giants, you can learn to build something that doesn't just work, but ***thrives***.
+
+I've seen the magic happen – not just in cracking **high-stakes interviews**, but in building careers that genuinely **click**. The principles are universal, and by 2025, they're more critical than ever. 
+
+**Let's dive into your personal system design toolkit.**
 
 ---
 
-### 1. Define Your North Star (The 'User Story' of You)
+## 1. Define Your North Star (The 'User Story' of You)
 
-**The Core Idea:** Before you write a single line of code (or apply for a single job), understand the *real* problem you're trying to solve. In system design, this is about nailing the requirements. For your career, it's about defining your 'user story' – what kind of impact do *you* want to make? What problems genuinely excite you?
+> **The Core Idea:** Before you write a single line of code (or apply for a single job), understand the *real* problem you're trying to solve. 
 
-**Why It Matters:** Without a clear 'north star,' you're just drifting. You might chase shiny objects or popular trends that don't align with your true aspirations, leading to burnout or dissatisfaction. Knowing your purpose helps you filter opportunities and make intentional choices.
+In system design, this is about **nailing the requirements**. For your career, it's about defining your 'user story' – what kind of impact do *you* want to make? What problems genuinely excite you?
 
-**Real-World Example:** Instead of vaguely thinking, "I need a job in tech," get specific: "I want to build software that helps small businesses in underserved communities thrive," or "I want to solve environmental challenges through sustainable design and policy." This clarity transforms your job hunt from a generic search into a targeted mission.
+### Why It Matters
 
-**Actionable Steps:**
-*   **Journal Your 'Why':** Grab a coffee (or your favorite energy drink) and a notebook. Spend an hour brainstorming: What problems genuinely frustrate you? What makes you light up when you talk about it? What legacy do you want to build?
-*   **Informational Interviews:** Talk to people in roles or industries you admire. Ask them about their daily work, challenges, and what they find most rewarding. See if their 'user story' resonates with yours.
-*   **Build a Vision Board (Digital or Physical):** Visualizing your ideal career path and the impact you want to have can solidify your North Star.
+Without a clear 'north star,' you're just **drifting**. You might chase shiny objects or popular trends that don't align with your true aspirations, leading to **burnout** or dissatisfaction. 
+
+Knowing your purpose helps you **filter opportunities** and make intentional choices.
+
+### Real-World Example
+
+Instead of vaguely thinking, *"I need a job in tech,"* get **specific**:
+
+* *"I want to build software that helps small businesses in underserved communities thrive"*
+* *"I want to solve environmental challenges through sustainable design and policy"*
+
+This clarity transforms your job hunt from a **generic search** into a **targeted mission**.
+
+### Actionable Steps
+
+1. **Journal Your 'Why':** Grab a coffee (or your favorite energy drink) and a notebook. Spend an hour brainstorming: What problems genuinely frustrate you? What makes you light up when you talk about it? What legacy do you want to build?
+
+2. **Informational Interviews:** Talk to people in roles or industries you admire. Ask them about their daily work, challenges, and what they find most rewarding. See if their 'user story' resonates with yours.
+
+3. **Build a Vision Board (Digital or Physical):** Visualizing your ideal career path and the impact you want to have can solidify your North Star.
 
 ---
 
